0023380: BRepOffsetAPI_MakeFilling fails and leaves boundary faces with high tolerance

Avoid exception: use BRep_Builder for building wire instead of using BRepLib_MakeWire.